# Influencers

./: .env.example  .gitignore  README.md  TODOS.md  config.py  dashboard.py  database.py  main.py  models.py  pyproject.toml
.claude/: settings.local.json
personas/: mina.yaml
prompts/: system_prompt.yaml
scripts/: generate_all.py  generate_sdxl.py
services/: comfyui.py  llm.py  pipeline.py
tests/: conftest.py  test_api.py  test_comfyui_service.py  test_llm_service.py  test_models.py  test_pipeline.py
workflows/: default.json
